Node API documentation
